--- a/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>f53a2834-ffbb-4873-9175-7b2698b9066d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
