--- a/Services/Catalog/Catalog.API/Properties/launchSettings.json
+++ b/Services/Catalog/Catalog.API/Properties/launchSettings.json
@@ -7,7 +7,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://localhost:5000",
+      "launchUrl": "health"
     },
     "https": {
       "commandName": "Project",
@@ -16,7 +17,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:6050;http://localhost:5000"
+      "applicationUrl": "https://localhost:6050;http://localhost:5000",
+      "launchUrl": "health"
     },
     "IIS Express": {
       "commandName": "IISExpress",
