--- a/Services/Basket/Basket.API/appsettings.json
+++ b/Services/Basket/Basket.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=5434;Database=BasketDb;User Id=postgres;Password=1234;Include Error Detail=true"
+    "Database": "Server=localhost;Port=5434;Database=BasketDb;User Id=postgres;Password=1234;Include Error Detail=true",
+    "Redis": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
