--- a/Services/docker-compose.yml
+++ b/Services/docker-compose.yml
@@ -16,6 +16,13 @@ services:
       context: .
       dockerfile: Catalog/Catalog.API/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Basket/Basket.API/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:
+
