feat: ef migration added in discount

--- a/Services/Discount/Discount.Grpc/appsettings.json
+++ b/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Data Source=discountdb"
+    "Database": "Data Source=discount.db"
   },
   "Logging": {
     "LogLevel": {
