feat: discount gprc docker config added

--- a/Services/docker-compose.override.yml
+++ b/Services/docker-compose.override.yml
@@ -66,3 +66,16 @@ services:
     volumes:
       - ${USER_SECRETS_PATH}:/home/app/.microsoft/usersecrets:ro
       - ${HTTPS_CERTS_PATH}:/home/app/.aspnet/https
+
+  discount.grpc:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Data Source=discount.db
+    ports:
+      - "6042:8080"
+      - "6052:8081"
+    volumes:
+      - ${USER_SECRETS_PATH}:/home/app/.microsoft/usersecrets:ro
+      - ${HTTPS_CERTS_PATH}:/home/app/.aspnet/https
