--- a/Services/docker-compose.override.yml
+++ b/Services/docker-compose.override.yml
@@ -57,9 +57,11 @@ services:
       - ASPNETCORE_Kestrel__Certificates__Default__Password=1234
       - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=1234;Include Error Detail=true
       - ConnectionStrings__Redis=cachedb:6379
+      - GrpcSettings__DiscountGrpc=https://discount.grpc:8081
     depends_on:
       - basketdb
       - cachedb
+      - discount.grpc
     ports:
       - "6041:8080"
       - "6051:8081"
