--- a/Services/Ordering/Ordering.API/Properties/launchSettings.json
+++ b/Services/Ordering/Ordering.API/Properties/launchSettings.json
@@ -12,8 +12,7 @@
     },
     "https": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
